Fix alignment issues in App and MusicPopOver components

--- a/muzik-offline/src/interface/styles/components/popover/MusicPopOver.scss
+++ b/muzik-offline/src/interface/styles/components/popover/MusicPopOver.scss
@@ -68,6 +68,7 @@
         .buttons{
             width: 234px;
             display: flex;
+            justify-content: center;
 
             .button-left, .button-right{
                 justify-content: center;
