--- a/muzik-offline/src/interface/styles/layouts/HistoryNextFloating.scss
+++ b/muzik-offline/src/interface/styles/layouts/HistoryNextFloating.scss
@@ -36,7 +36,7 @@
     .HistoryUpcoming_tabs{
         width: 225px;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
 
         .Upcoming_tab, .History_tab{
             justify-content: center;
